--- a/Lab2/CPP/source/.vscode/extensions.json
+++ b/Lab2/CPP/source/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
     "recommendations": [
-        "tchojnacki.cpp-compile",
-        "ms-vscode.cpptools",
-        "franneck94.c-cpp-runner"
+        "ms-vscode.cpptools-extension-pack"
+        
     ]
 }
