--- a/Lab2/CPP/Dockerfile
+++ b/Lab2/CPP/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     make \
     cmake \
     g++ \
+    gdb \
     libncurses5-dev \
     libncursesw5-dev \
 && rm -rf /var/lib/apt/lists/*
