--- a/Lab2/Ruby/source/.vscode/extensions.json
+++ b/Lab2/Ruby/source/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
     "recommendations": [
-        "rangav.vscode-thunder-client"
+        "rangav.vscode-thunder-client",
+        "koichisasada.vscode-rdbg",
+        "rebornix.ruby"
     ]
 }
