--- a/Lab2/Rust/source/.vscode/settings.json
+++ b/Lab2/Rust/source/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#88d7ea",
-        "activityBar.background": "#88d7ea",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#de41bf",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#88d7ea",
-        "statusBar.background": "#5dc9e2",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#32bbda",
-        "statusBarItem.remoteBackground": "#5dc9e2",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#5dc9e2",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#5dc9e299",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#b85b19",
+        "activityBar.background": "#b85b19",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#1bc461",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#b85b19",
+        "statusBar.background": "#8b4513",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#b85b19",
+        "statusBarItem.remoteBackground": "#8b4513",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#8b4513",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#8b451399",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#5dc9e2"
+    "peacock.remoteColor": "#8B4513"
 }
