--- a/Templates/CPP/source/.vscode/launch.json
+++ b/Templates/CPP/source/.vscode/launch.json
@@ -24,7 +24,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "g++ build active file",
+            "preLaunchTask": "C/C++: g++-9 build active file",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
