--- a/Templates/CPP/source/.vscode/launch.json
+++ b/Templates/CPP/source/.vscode/launch.json
@@ -2,13 +2,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Bygg og debug aktive file",
+            "name": "C/C++: g++-7 build and debug active file",
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceRoot}",
+            "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -24,7 +24,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: g++-9 build active file",
+            "preLaunchTask": "C/C++: g++-7 build active file",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
