--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ DockerIntro.pptx
 ~$workshop01.pptx
 ff8e0db3-f25d-4e9f-b68e-5ae38b411d79.pptx
 Templates/Ruby/source/cow_say/tmp/cache/
+Lab1/fortran2/source/HelloWorld
+Lab1/fortran2/source/HelloWorld.o
